Merged branch testing_branch_20061130 with bugfix-4405+4406+4657+4665. Conflicts resolved.